# flask-tutorial

./: .gitignore  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py  db.py
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: create.html  index.html  update.html
instance/: flask.sqlite
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py
